// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeckDetail renderIcon renders properly 1`] = `
<FlashcardIcon
  color="#ffffff"
  size={24}
/>
`;

exports[`DeckDetail renderItem renders properly 1`] = `
<Flashcard>
  <withTheme(TextInput)
    editable={false}
    label="Question"
    multiline={true}
    value="What is React?"
  />
  <withTheme(TextInput)
    editable={false}
    label="Answer"
    multiline={true}
    value="A library for managing user interfaces"
  />
</Flashcard>
`;

exports[`DeckDetail renders properly when deck does not have questions 1`] = `
<Component
  style={
    Object {
      "flex": 1,
    }
  }
>
  <KeyboardAvoidingView
    behavior="padding"
    enabled={true}
    keyboardVerticalOffset={94}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <NoContent />
  </KeyboardAvoidingView>
</Component>
`;

exports[`DeckDetail renders properly when deck has questions 1`] = `
<Component
  style={
    Object {
      "flex": 1,
    }
  }
>
  <KeyboardAvoidingView
    behavior="padding"
    enabled={true}
    keyboardVerticalOffset={94}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <FlatList
      data={
        Array [
          Object {
            "answer": "A library for managing user interfaces",
            "question": "What is React?",
          },
        ]
      }
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      renderItem={[Function]}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </KeyboardAvoidingView>
</Component>
`;
